<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".start.LoginFragment">

    <ImageView
        android:id="@+id/img_login_logo"
        style="@style/img_start_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_login_intro"
        style="@style/text_start_intro"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/img_login_logo"
        app:layout_constraintEnd_toEndOf="@id/img_login_logo"
        app:layout_constraintTop_toBottomOf="@id/img_login_logo"/>

    <TextView
        android:id="@+id/text_login_id"
        style="@style/text_start_edit"
        android:text="@string/start_id"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/lay_login_id"
        app:layout_constraintTop_toBottomOf="@id/text_login_intro"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_login_id"
        style="@style/lay_start_edit"
        app:layout_constraintStart_toStartOf="@id/img_login_logo"
        app:layout_constraintEnd_toEndOf="@id/img_login_logo"
        app:layout_constraintTop_toBottomOf="@id/text_login_id">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_id"
            style="@style/edit_start"
            android:hint="@string/start_id_hint"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_login_pw"
        style="@style/text_start_edit"
        android:text="@string/start_pw"
        app:layout_constraintStart_toStartOf="@id/lay_login_pw"
        app:layout_constraintTop_toBottomOf="@id/lay_login_id"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_login_pw"
        style="@style/lay_start_edit"
        android:hint="@string/start_pw_hint"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@id/lay_login_id"
        app:layout_constraintEnd_toEndOf="@id/lay_login_id"
        app:layout_constraintTop_toBottomOf="@id/text_login_pw">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_pw"
            style="@style/edit_start"
            android:hint="@string/start_pw_hint"
            android:maxLength="20"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_login"
        style="@style/btn"
        android:text="로그인"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>