<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/img_home_logo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:src="@drawable/text_logo"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/img_home_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/my_page_profile"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_home_name"
        style="@style/text_home_intro"
        android:text="푕힁영 님"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_home_header" />

    <TextView
        android:id="@+id/text_home_curious"
        style="@style/text_home_intro"
        android:text="@string/home_curious"
        app:layout_constraintStart_toStartOf="@id/text_home_name"
        app:layout_constraintTop_toBottomOf="@id/text_home_name"/>
    <TextView
        android:id="@+id/text_home_school"
        style="@style/text_home_intro"
        android:text="@string/home_school"
        android:textColor="@color/text_blue"
        app:layout_constraintStart_toEndOf="@id/text_home_curious"
        app:layout_constraintTop_toBottomOf="@id/text_home_name"/>
    <TextView
        android:id="@+id/text_home_of"
        style="@style/text_home_intro"
        android:text="@string/home_of"
        app:layout_constraintStart_toEndOf="@id/text_home_school"
        app:layout_constraintTop_toBottomOf="@id/text_home_name"/>
    
    <TextView
        android:id="@+id/text_home_information"
        style="@style/text_home_intro"
        android:text="@string/home_information"
        app:layout_constraintStart_toStartOf="@id/text_home_curious"
        app:layout_constraintTop_toBottomOf="@id/text_home_curious"/>

    <TextView
        android:id="@+id/text_home_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_before"
        android:textColor="#949494"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_home_information"
        app:layout_constraintTop_toBottomOf="@id/text_home_information"/>

    <ImageView
        android:id="@+id/img_home_circle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:src="@drawable/home_circle"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_home_name"/>

    <LinearLayout
        android:id="@+id/lay_home_inspection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/home_inspection_background"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home_before">
        <TextView
            android:id="@+id/text_home_inspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_inspection"
            android:textSize="16sp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/text_blue"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/text_home_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_check"
            android:textSize="14sp"
            android:fontFamily="@font/inter_light"
            android:textColor="#90A2B8"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_home_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/home_banner"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_home_inspection"/>

    <TextView
        android:id="@+id/text_home_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_recommend"
        android:fontFamily="@font/inter_bold"
        android:textSize="21sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/recycler_home"
        app:layout_constraintTop_toBottomOf="@id/img_home_banner"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home_recommend"/>

</androidx.constraintlayout.widget.ConstraintLayout>